<resources>

    //general strings
    <string name="or">or</string>
    <string name="create">CREATE</string>
    <string name="submit">SUBMIT</string>
    <string name="save">SAVE</string>

    <string name="edit">EDIT</string>

    <string name="add">ADD</string>


    //main menu strings
    <string name="app_name">TODesk</string>
    <string name="app_description">Tournament Organizer</string>
    <string name="main_CNT">Create New Tournament</string>
    <string name="main_VET">View Existing Tournament</string>

    //account choice strings
    <string name="account_choice_prompt">Add NEW Tournament to:</string>
    <string name="new_account">NEW Account</string>
    <string name="existing_account">EXISTING Account</string>

    //create+login account strings
    <string name="create_account_prompt">Create Account</string>
    <string name="create_account_prompt2">ORGANIZER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_conf">CONFIRM Password</string>
    <string name="login_account_prompt">Login</string>
    <string name="login_account_prompt2">add to your account</string>
    <string name="login">LOGIN</string>

    //access tournament strings
    <string name="access_prompt">Enter Tournament Code</string>

    //configure tournament strings
    <string name="configure_prompt">Configure Tournament</string>
    <string name="player_settings">Player Settings</string>
    <string name="tournament_settings">Tournament Settings</string>

    //add player strings
    <string name="add_player">Add Player</string>
    <string name="current_players">Current Players</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="player_7">Player 7</string>
    <string name="player_8">Player 8</string>
    <string name="player_9">Player 9</string>
    <string name="player_10">Player 10</string>
    <string name="player_11">Player 11</string>
    <string name="player_12">Player 12</string>
    <string name="player_13">Player 13</string>
    <string name="player_14">Player 14</string>
    <string name="player_15">Player 15</string>
    <string name="player_16">Player 16</string>

    //player placements strings
    <string name="view_empty">VIEW EMPTY BRACKET</string>
    <string name="player_placements">PLAYER SEEDING</string>

    //tournament settings strings
    <string name="tournament_settings_prompt">Settings</string>
    <string name="tournament_name_prompt">Tournament Name</string>
    <string name="tournament_game_prompt">Game</string>
    <string name="bracket_style_prompt">Bracket Style</string>
    <string name="show_choices">[select choice]</string>
    <string-array name="tournament_format_choice">
        <item>Swiss Pool</item>
        <item>Round Robin</item>
        <item>Double Elimination</item>
    </string-array>
    <string name="SP">Swiss Pool</string>
    <string name="RR">Round Robin</string>
    <string name="DE">Double Elimination</string>
    <string name="title_activity_elim">ElimActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

     //Save Access Code Page Strings
    <string name="Save_Access_Code">Save Access Code</string>
    <string name="Current_Bracket">Current Bracket</string>

    //player profile strings
    <string name="player_info">Player Information</string>
    <string name="username">Username</string>
    <string name="organization">Team/Organization</string>
    <string name="rank">Rank</string>

    //Round Robin Pre-Bracket
    <string name="Round_Robin_Bracket">Round Robin Bracket</string>
    <string name="winning_player">Player #</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="Wdash">-</string>
    <string name="Ldash">-</string>
    <string name="winner">Winner:</string>


</resources>
