<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tournament_Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue">

    <!--shows app name-->
    <include layout="@layout/app_name_view"/>

    <TextView
        android:id="@+id/configure_prompt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:fontFamily="@font/orbitron_medium"
        android:gravity="center"
        android:text="@string/configure_prompt"
        android:textColor="@color/pastel_yellow"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text" />

    <Button
        android:id="@+id/player_settings"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="50dp"

        android:background="@drawable/baby_blue_button_shape"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/player_settings"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configure_prompt" />

    <Button
        android:id="@+id/tournament_settings"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="50dp"

        android:background="@drawable/baby_blue_button_shape"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/tournament_settings"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_settings" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"

        android:background="@drawable/blue_button_shape"
        android:fontFamily="@font/orbitron_medium"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>