<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_blue">

    <!--shows app name-->
    <include layout="@layout/app_name_view"/>

    <!--prompt login account-->
    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"

        android:fontFamily="@font/orbitron_medium"
        android:gravity="center"
        android:text="@string/login_account_prompt"
        android:textColor="@color/pastel_yellow"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text" />

    <TextView
        android:id="@+id/login_prompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/orbitron_medium"
        android:gravity="center"
        android:text="@string/login_account_prompt2"
        android:textColor="@color/pastel_yellow"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_prompt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_prompt2"
        app:layout_constraintVertical_bias="0.977">

        <TextView
            android:id="@+id/frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/create_account_prompt2"
            android:textColor="@color/navy_blue"


            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"

            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/navy_blue"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"

            android:ems="10"
            android:gravity="center"

            android:hint="example@email.com"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"

            android:fontFamily="@font/orbitron"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/navy_blue"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"

            android:ems="10"
            android:gravity="center"
            android:hint="Enter password"

            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"

            android:background="@drawable/blue_button_shape"
            android:fontFamily="@font/orbitron_medium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"

            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>